Implemented improved merge handling of JPA associations